2010-01-05  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/IntegerVector.h new class Rcpp::IntegerVector 
	to manage integer vector (INTSXP). IntegerVector can be
	constructed from SEXP of appropriate type, from an int which 
	simply allocates a vector that big, or using an 
	initialization list (the last is GCC >= 4.4 only). 
	Additionally IntegerVector defines begin() and end() so that 
	they can be used in STL algorithms
	* src/IntegerVector.cpp : implementation
	* inst/unitTests/runit.IntegerVector.R: unit tests

	* src/Rcpp/NumericVector.h : same as above, but for numeric 
	vectors (REALSXP)
	* src/NumericVector.cpp : implementation
	* inst/unitTests/runit.NumericVector.R: unit tests

	* src/Rcpp/RawVector.h : same as above, but for numeric 
	vectors (RAWSXP)
	* src/RawVector.cpp : implementation
	* inst/unitTests/runit.RawVector.R: unit tests

	* src/RcppCommon.h: improve the conditional compiling logic
	with macros HAS_VARIADIC_TEMPLATES and HAS_INIT_LISTS instead
	of CXX0X. This ensures the package can be compiled with 
	older GCC, with lower functionality

	* src/RcppCommon.{h,cpp}: added a capabilities function that 
	can be used to bring the result of the two above macros to R

	* R/RcppLdPaths.R: added unexported function RcppCapabilities
	to call the internal capabilities. capabilities is an alias
	to RcppCapabilities so that we can call Rcpp::capabilities()

2010-01-04  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/Function.h: new class Rcpp::Function to manage functions
	(closures, primitives and builtins) all share the Function class
	(at least for now). This is implemented as a functor taking 
	variable number of arguments, so it looks pretty similar to the 
	R function
	
	* src/Function.cpp: implementation
	
	* inst/unitTests/runit.Function.R: unit tests

	* src/Rcpp/Pairlist.h: new class Rcpp::Pairlist to manage dotted
	pair lists (LISTSXP). unsurprisingly this shares a lot of
	similarities with Language class
